--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html class="">
 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
-<title>i客如云</title>
+<title>i微洽通</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-<meta name="keywords" content="客如云导航,客如云之家">
-<meta name="description" content="i客如云是客如云旗下的轻便、简洁的网址导航，为广大客如云员工提供定制化的应用性导航门户。">
+<meta name="keywords" content="微洽通导航,微洽通之家">
+<meta name="description" content="i微洽通是微洽通旗下的轻便、简洁的网址导航，为广大微洽通员工提供定制化的应用性导航门户。">
 <base href="" />
 <link id="bs-css" href="./Public/css/bootstrap.paper.min.css" data-href="./Public/css/bootstrap.paper.min.css" rel="stylesheet" type="text/css">
 <link id="ng-css" data-href="./Public/css/bootstrap.cyborg.min.css" rel="stylesheet" type="text/css">
@@ -39,53 +39,11 @@
 
                 	<ul class="recommonds">
                     <h4>常用工具</h4>
-                    <li data_old="2" class="sigleRecommond">
-                        <span old_del="2" class="del-flag glyphicon glyphicon-remove"></span>
-                        <a class="singleLink" href="https://erp.keruyun.com/" title="BOSS" target="_blank">
-                        <img class="img-links2" src="./Public/pic/boss.png" style="box-shadow: rgba(76, 176, 243, 0.685) 0 10px 10px -6px;">
-                        <span class="text-links">BOSS</h4></span>
-                       </a>
-                    </li>
-                    <li data_old="1" class="sigleRecommond">
-                        <span old_del="1" class="del-flag glyphicon glyphicon-remove"></span>
-                        <a class="singleLink" href="https://b.keruyun.com/" title="Mind商户后台" target="_blank">
-                        <img class="img-links2" src="./Public/pic/mind.png" style="box-shadow: rgba(76, 176, 243, 0.685) 0 10px 10px -6px;">
-                        <span class="text-links">Mind商户后台</span>
-                        </a>
-                    </li>
                     <li data_old="3" class="sigleRecommond">
                         <span old_del="3" class="del-flag glyphicon glyphicon-remove"></span>
                         <a class="singleLink" href="https://exmail.qq.com/login" title="企业邮箱，天天在用~！" target="_blank">
                         <img class="img-links2" src="./Public/pic/email.png" style="box-shadow: rgba(0, 121, 190, 0.75) 0 10px 10px -6px;">
                         <span class="text-links">企业邮箱</span>
-                        </a>
-                    </li>
-                    <li data_old="5" class="sigleRecommond">
-                        <span old_del="5" class="del-flag glyphicon glyphicon-remove"></span>
-                        <a class="singleLink" href="https://support.qq.com/product/30608" title="吐槽？来吧！奇思妙想？欢迎来搞！" target="_blank">
-                        <img class="img-links2" src="./Public/pic/damg.png" style="box-shadow: rgba(76, 176, 243, 0.685) 0 10px 10px -6px;">
-                        <span class="text-links">KRY产品大焖锅</span>
-                        </a>
-                    </li>
-                    <li data_old="12" class="sigleRecommond">
-                        <span old_del="12" class="del-flag glyphicon glyphicon-remove"></span>
-                        <a class="singleLink" href="https://redmine.keruyun.com" title="Redmine是什么？BUG与需求提交工具" target="_blank">
-                            <img class="img-links2" src="./Public/pic/redmine.png" style="box-shadow: 0 10px 10px -6px rgba(76, 176, 243, 0.685);">
-                            <span class="text-links">Redmine</span>
-                        </a>
-                    </li>
-                    <li data_old="8" class="sigleRecommond">
-                        <span old_del="8" class="del-flag glyphicon glyphicon-remove"></span>
-                        <a class="singleLink" href="http://keruyun.yunxuetang.cn/login.htm" title="云学堂，是个好东西！" target="_blank">
-                        <img class="img-links2" src="./Public/pic/yunxt.png" style="box-shadow:  rgba(0, 157, 255, 0.75) 0 10px 10px -6px;">
-                        <span class="text-links">云学堂</span>
-                        </a>
-                    </li>
-                    <li data_old="10" class="sigleRecommond">
-                        <span old_del="10" class="del-flag glyphicon glyphicon-remove"></span>
-                        <a class="singleLink" href="https://www.italent.cn/?entrytype=2&tid=106454#login" title="北森iTalent，考勤哟~，工资挂钩哟~！" target="_blank">
-                            <img class="img-links2" src="./Public/pic/beis.png" style="box-shadow: rgba(0, 157, 255, 0.75) 0 10px 10px -6px;">
-                            <span class="text-links">北森iTalent</span>
                         </a>
                     </li>
                     <li data_old="14" class="sigleRecommond">
@@ -97,7 +55,7 @@
                     </li>
                     <li data_old="6" class="sigleRecommond">
                         <span old_del="6" class="del-flag glyphicon glyphicon-remove"></span>
-                        <a class="singleLink" href="http://wenda.kerushen.com/" title="问 答,很牛逼的论坛哈！" target="_blank">
+                        <a class="singleLink" href="http://wqt.baiwan.pro/" title="问答社区！" target="_blank">
                         <img class="img-links2" src="./Public/pic/wd.png" style="box-shadow:  rgba(0, 157, 255, 0.75) 0 10px 10px -6px;">
                         <span class="text-links">问 答</span>
                         </a>
@@ -110,44 +68,9 @@
         <div class="main-conter">
                 <ul class="recommonds">
                     <h4>工程工具</h4>
-                    <li data_old="25" class="sigleRecommond">
-                        <span old_del="25" class="del-flag glyphicon glyphicon-remove"></span>
-                        <a class="singleLink" href="https://pro.formtalk.net/kry " title="工单系统登录" target="_blank">
-                        <img class="img-links2" src="./Public/pic/gongd.png" style="box-shadow: rgba(76, 176, 243, 0.685) 0 10px 10px -6px;">
-                        <span class="text-links">工单系统登录</h4></span>
-                        </a>
-                    </li>
-                    <li data_old="4" class="sigleRecommond">
-                        <span old_del="4" class="del-flag glyphicon glyphicon-remove"></span>
-                        <a class="singleLink" href="https://down.keruyun.com/" title="Down下载中心，官方发布中心哟！" target="_blank">
-                        <img class="img-links2" src="./Public/pic/down.png" style="box-shadow: rgba(76, 176, 243, 0.685)0 10px 10px -6px;">
-                        <span class="text-links">Down下载中心</span>
-                        </a>
-                    </li>
-                    <li data_old="9" class="sigleRecommond">
-                        <span old_del="9" class="del-flag glyphicon glyphicon-remove"></span>
-                        <a class="singleLink" href="http://support.keruyun.com/downHelper" title="客户端版本不清楚？助手帮您扫天下！" target="_blank">
-                        <img class="img-links2" src="./Public/pic/kehud.png" style="box-shadow:  rgba(0, 157, 255, 0.75) 0 10px 10px -6px;">
-                        <span class="text-links">客户端安装助手</span>
-                        </a>
-                    </li>
-                    <li data_old="7" class="sigleRecommond">
-                        <span old_del="7" class="del-flag glyphicon glyphicon-remove"></span>
-                        <a class="singleLink" href="http://down.kerushen.com/" title="其他apk应用下载，例如终端，会用吗？" target="_blank">
-                        <img class="img-links2" src="./Public/pic/apkother.png" style="box-shadow: rgb(50, 138, 206) 0 10px 10px -6px;">
-                        <span class="text-links">其他APK应用</span>
-                        </a>
-                    </li>
-                    <li data_old="13" class="sigleRecommond">
-                        <span old_del="13" class="del-flag glyphicon glyphicon-remove"></span>
-                        <a class="singleLink" href="http://api.map.baidu.com/lbsapi/getpoint/index.html" title="经纬度坐标拾取，经常定位哟~！" target="_blank">
-                        <img class="img-links2" src="./Public/pic/zuobiao.png" style="box-shadow: 0 10px 10px -6px rgba(65, 144, 238, 0.75);">
-                        <span class="text-links">经纬度坐标拾取</span>
-                        </a>
-                    </li>
-                    <li data_old="18" class="sigleRecommond">
+                  <li data_old="18" class="sigleRecommond">
                         <span old_del="18" class="del-flag glyphicon glyphicon-remove"></span>
-                        <a class="singleLink" href="http://www.speedtest.cn/" title="网速测试，常用的哟~！" target="_blank">
+                        <a class="singleLink" href="http://www.speedtest.net/" title="网速测试，常用的哟~！" target="_blank">
                         <img class="img-links2" src="./Public/pic/net_test.png" style="box-shadow: 0 10px 10px -6px rgb(28, 102, 197);">
                         <span class="text-links">网速测试</span>
                         </a>
@@ -159,61 +82,9 @@
                         <span class="text-links">工程师必备工具</span>
                         </a>
                     </li>
-                    </li>
-                        <li data_old="21" class="sigleRecommond">
-                        <span old_del="21" class="del-flag glyphicon glyphicon-remove"></span>
-                        <a class="singleLink" href="https://kryqiniu.shishike.com/" title="通过临时密码登陆，获取打印日志下载" target="_blank">
-                        <img class="img-links2" src="./Public/pic/print_log.png" style="box-shadow: 0 10px 10px -6px rgba(118, 173, 210, 0.75);">
-                        <span class="text-links">打印日志下载</span>
-                        </a>
-                    </li>
                     </ul>
             </div>
         </div>
-
-    <div class="framework">
-        <div class="main-conter">
-                <ul class="recommonds">
-                    <h4>其他工具</h4>
-                        <li data_old="21" class="sigleRecommond">
-                            <span old_del="21" class="del-flag glyphicon glyphicon-remove"></span>
-                            <a class="singleLink" href="https://www.fxiaoke.com/XV/User/Login" title="纷享销客（销售CRM管理）" target="_blank">
-                            <img class="img-links2" src="./Public/pic/xiaoscrm.png" style="box-shadow: rgba(76, 176, 243, 0.685) 0 10px 10px -6px;">
-                            <span class="text-links">销售CRM管理</span>
-                            </a>
-                        </li>
-                        <li data_old="22" class="sigleRecommond">
-                            <span old_del="22" class="del-flag glyphicon glyphicon-remove"></span>
-                            <a class="singleLink" href="https://erp.keruyun.com/contract/index.html" title="电子合同" target="_blank">
-                            <img class="img-links2" src="./Public/pic/dianzht.png" style="box-shadow: rgba(76, 176, 243, 0.685) 0 10px 10px -6px;">
-                            <span class="text-links">电子合同</span>
-                            </a>
-                        </li>
-                        <li data_old="23" class="sigleRecommond">
-                            <span old_del="23" class="del-flag glyphicon glyphicon-remove"></span>
-                            <a class="singleLink" href="https://vip.cardinfo.com.cn/agent/" title="卡友服务商系统" target="_blank">
-                            <img class="img-links2" src="./Public/pic/kay.png" style="box-shadow: rgba(76, 176, 243, 0.685) 0 10px 10px -6px;">
-                            <span class="text-links">卡友支付</h4></span>
-                            </a>
-                        </li>
-                        <li data_old="24" class="sigleRecommond">
-                            <span old_del="24" class="del-flag glyphicon glyphicon-remove"></span>
-                            <a class="singleLink" href="https://v.91dbq.com/agent/" title="点佰趣服务商管理系统" target="_blank">
-                            <img class="img-links2" src="./Public/pic/dianbq.png" style="box-shadow: rgba(76, 176, 243, 0.685) 0 10px 10px -6px;">
-                            <span class="text-links">点佰趣管理系统</h4></span>
-                            </a>
-                        </li>
-                        <li data_old="25" class="sigleRecommond">
-                            <span old_del="25" class="del-flag glyphicon glyphicon-remove"></span>
-                            <a class="singleLink" href="https://www.jiandaoyun.com/signin" title="简道云系统登录" target="_blank">
-                            <img class="img-links2" src="./Public/pic/jiandy.png" style="box-shadow: rgba(76, 176, 243, 0.685) 0 10px 10px -6px;">
-                            <span class="text-links">简道云</h4></span>
-                            </a>
-                        </li>
-                    </ul>
-            </div>
-        </div>
-
 
         <div class="framework">
             <div class="main-conter">
