--- a/index.html
+++ b/index.html
@@ -60,6 +60,20 @@
                         <span class="text-links">问 答</span>
                         </a>
                     </li>
+                    <li data_old="11" class="sigleRecommond">
+                            <span old_del="11" class="del-flag glyphicon glyphicon-remove"></span>
+                            <a class="singleLink" href="./homework.html" title="知识星球，技能饭碗不二首选~！" target="_blank">
+                                <img class="img-links2" src="./Public/pic/zhishixq.png" style="box-shadow: rgba(76, 176, 243, 0.685) 0 10px 10px -6px;">
+                                <span class="text-links">知识星球</span>
+                            </a>
+                    </li>
+                    <li data_old="101" class="sigleRecommond">
+                            <span old_del="101" class="del-flag glyphicon glyphicon-remove"></span>
+                            <a class="singleLink" href="https://t.zsxq.com/ufuJqbQ" title="基础网络建立.MP4；创作人：重庆-文严" target="_blank">
+                            <img class="img-links2" src="./Public/pic/jichuwl.png" style="box-shadow: 0 10px 10px -6px rgba(118, 173, 210, 0.75);">
+                            <span class="text-links">基础网络建立</span>
+                            </a>
+                    </li>
             </div> 
         </div>
     </div>
@@ -84,41 +98,9 @@
                     </li>
                     </ul>
             </div>
-        </div>
-
-        <div class="framework">
-            <div class="main-conter">
-                    <ul class="recommonds">
-                        <h4>热点资讯</h4>
-                        <li data_old="11" class="sigleRecommond">
-                            <span old_del="11" class="del-flag glyphicon glyphicon-remove"></span>
-                            <a class="singleLink" href="./homework.html" title="知识星球，技能饭碗不二首选~！" target="_blank">
-                                <img class="img-links2" src="./Public/pic/zhishixq.png" style="box-shadow: rgba(76, 176, 243, 0.685) 0 10px 10px -6px;">
-                                <span class="text-links">知识星球</span>
-                            </a>
-                        </li>
-                        <li data_old="21" class="sigleRecommond">
-                            <span old_del="21" class="del-flag glyphicon glyphicon-remove"></span>
-                            <a class="singleLink" href="http://www.on-gateway.top/" title="外卖、团购、平台对接FAQ!" target="_blank">
-                            <img class="img-links2" src="./Public/pic/faq.png" style="box-shadow: rgba(76, 176, 243, 0.685) 0 10px 10px -6px;">
-                            <span class="text-links">On Gateway FAQ</span>
-                            </a>
-                        </li>
-                        </li>
-                        <li data_old="101" class="sigleRecommond">
-                            <span old_del="101" class="del-flag glyphicon glyphicon-remove"></span>
-                            <a class="singleLink" href="https://t.zsxq.com/ufuJqbQ" title="基础网络建立.MP4；创作人：重庆-文严" target="_blank">
-                            <img class="img-links2" src="./Public/pic/jichuwl.png" style="box-shadow: 0 10px 10px -6px rgba(118, 173, 210, 0.75);">
-                            <span class="text-links">基础网络建立</span>
-                            </a>
-                        </li>
-                    </ul>
-            </div>
-        </div>
-        
+        </div>   
         </a>
 
- 
                         <div class="tab-content">
                             <div class="tab-pane" id="panel-wallpaper">
                                     <p>
@@ -177,7 +159,7 @@
 </div><br>
         <div class="footer-box">
         <a id="banquan" href="http://i.keruyun.com" >
-            2018©客如云导航
+            2018©微洽通导航
             <a href="javascript:void(0)" id="nightMode" class='yejian'>黑夜模式</a>
         </a>
     </div>
