--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
 <html class="">
 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
@@ -39,68 +38,107 @@
 
                 	<ul class="recommonds">
                     <h4>常用工具</h4>
-                    <li data_old="3" class="sigleRecommond">
-                        <span old_del="3" class="del-flag glyphicon glyphicon-remove"></span>
-                        <a class="singleLink" href="https://exmail.qq.com/login" title="企业邮箱，天天在用~！" target="_blank">
-                        <img class="img-links2" src="./Public/pic/email.png" style="box-shadow: rgba(0, 121, 190, 0.75) 0 10px 10px -6px;">
-                        <span class="text-links">企业邮箱</span>
+                    <li data_old="1" class="sigleRecommond">
+                        <span old_del="1" class="del-flag glyphicon glyphicon-remove"></span>
+                        <a class="singleLink" href="https://mail.qq.com" title="QQ邮箱，天天在用~！" target="_blank">
+                        <img class="img-links2" src="./Public/pic/qqmail.png" style="box-shadow: rgba(250, 103, 26, 0.75) 0 10px 10px -6px;">
+                        <span class="text-links">QQ邮箱</span>
                         </a>
                     </li>
-                    <li data_old="14" class="sigleRecommond">
-                        <span old_del="14" class="del-flag glyphicon glyphicon-remove"></span>
+                    <li data_old="2" class="sigleRecommond">
+                        <span old_del="2" class="del-flag glyphicon glyphicon-remove"></span>
                         <a class="singleLink" href="https://docs.qq.com/desktop/" title="腾讯文档" target="_blank">
                         <img class="img-links2" src="./Public/pic/txwd.png" style="box-shadow: 0 10px 10px -6px rgba(36, 166, 241, 0.75);">
                         <span class="text-links">腾讯文档</span>
                         </a>
                     </li>
-                    <li data_old="6" class="sigleRecommond">
-                        <span old_del="6" class="del-flag glyphicon glyphicon-remove"></span>
+                    <li data_old="3" class="sigleRecommond">
+                        <span old_del="3" class="del-flag glyphicon glyphicon-remove"></span>
+                        <a class="singleLink" href="https://shimo.im/login" title="石墨文档" target="_blank">
+                        <img class="img-links2" src="./Public/pic/shimo.png" style="box-shadow: 0 10px 10px -6px rgba(213, 213, 213, 0.75);">
+                        <span class="text-links">石墨文档</span>
+                        </a>
+                    </li>
+                    <li data_old="3" class="sigleRecommond">
+                        <span old_del="4" class="del-flag glyphicon glyphicon-remove"></span>
+                        <a class="singleLink" href="https://modao.cc/signin" title="墨刀" target="_blank">
+                        <img class="img-links2" src="./Public/pic/modao.png" style="box-shadow: 0 10px 10px -6px rgba(235, 86, 72, 0.75);">
+                        <span class="text-links">墨 刀</span>
+                        </a>
+                    </li>
+                    <li data_old="5" class="sigleRecommond">
+                        <span old_del="5" class="del-flag glyphicon glyphicon-remove"></span>
                         <a class="singleLink" href="http://wqt.baiwan.pro/" title="问答社区！" target="_blank">
-                        <img class="img-links2" src="./Public/pic/wd.png" style="box-shadow:  rgba(0, 157, 255, 0.75) 0 10px 10px -6px;">
+                        <img class="img-links2" src="./Public/pic/wenda.png" style="box-shadow:  rgba(231, 228, 213, 0.75) 0 10px 10px -6px;">
                         <span class="text-links">问 答</span>
                         </a>
                     </li>
-                    <li data_old="11" class="sigleRecommond">
-                            <span old_del="11" class="del-flag glyphicon glyphicon-remove"></span>
-                            <a class="singleLink" href="./homework.html" title="知识星球，技能饭碗不二首选~！" target="_blank">
-                                <img class="img-links2" src="./Public/pic/zhishixq.png" style="box-shadow: rgba(76, 176, 243, 0.685) 0 10px 10px -6px;">
+                    <li data_old="6" class="sigleRecommond">
+                            <span old_del="6" class="del-flag glyphicon glyphicon-remove"></span>
+                            <a class="singleLink" href="https://wx.zsxq.com/dweb/#/login" title="知识星球，知识平台不二首选~！" target="_blank">
+                                <img class="img-links2" src="./Public/pic/zsxq.png" style="box-shadow: rgba(76, 176, 243, 0.685) 0 10px 10px -6px;">
                                 <span class="text-links">知识星球</span>
                             </a>
                     </li>
-                    <li data_old="101" class="sigleRecommond">
-                            <span old_del="101" class="del-flag glyphicon glyphicon-remove"></span>
-                            <a class="singleLink" href="https://t.zsxq.com/ufuJqbQ" title="基础网络建立.MP4；创作人：重庆-文严" target="_blank">
-                            <img class="img-links2" src="./Public/pic/jichuwl.png" style="box-shadow: 0 10px 10px -6px rgba(118, 173, 210, 0.75);">
-                            <span class="text-links">基础网络建立</span>
+                    <li data_old="7" class="sigleRecommond">
+                            <span old_del="7" class="del-flag glyphicon glyphicon-remove"></span>
+                            <a class="singleLink" href="https://account.teambition.com/login" title="个人时间安排助手" target="_blank">
+                            <img class="img-links2" src="./Public/pic/tembition.png" style="box-shadow: 0 10px 10px -6px rgba(213, 213, 213, 0.75);">
+                            <span class="text-links">teambition</span>
                             </a>
+                    </li>
+					<li data_old="8" class="sigleRecommond">
+                            <span old_del="8" class="del-flag glyphicon glyphicon-remove"></span>
+                            <a class="singleLink" href="https://passport.umeng.com/login" title="友盟网站统计" target="_blank">
+                            <img class="img-links2" src="./Public/pic/youmeng.jpg" style="box-shadow: 0 10px 10px -6px rgba(0, 157, 255, 0.75);">
+                            <span class="text-links">友盟统计</span>
+                            </a>
+                    </li>
+                    <li data_old="9" class="sigleRecommond">
+                        <span old_del="9" class="del-flag glyphicon glyphicon-remove"></span>
+                        <a class="singleLink" href="http://www.cnbeta.com/" title="cnBeta" target="_blank">
+                            <img class="img-links2" src="./Public/pic/cnBeta.png" style="box-shadow: rgba(0, 157, 255, 0.75) 0 10px 10px -6px;">
+                            <span class="text-links">cnBeta</span>
+                        </a>
+                    </li>
+                    <li data_old="10" class="sigleRecommond">
+                        <span old_del="10" class="del-flag glyphicon glyphicon-remove"></span>
+                        <a class="singleLink" href="http://music.163.com/" title="网易云音乐" target="_blank">
+                            <img class="img-links2" src="./Public/pic/wangyiyun.png" style="box-shadow: 0 10px 10px -6px rgba(241, 33, 0, 0.75);">
+                            <span class="text-links">网易云音乐</span>
+                        </a>
+                    </li>
+					<li data_old="11" class="sigleRecommond">
+                        <span old_del="11" class="del-flag glyphicon glyphicon-remove"></span>
+                        <a class="singleLink" href="http://www.youku.com/" title="优酷网" target="_blank">
+                            <img class="img-links2" src="./Public/pic/youku.png" style="box-shadow: 0 10px 10px -6px rgba(213, 213, 213, 0.75);">
+                            <span class="text-links">优酷网</span>
+                        </a>
+                    </li>
+					<li data_old="12" class="sigleRecommond">
+                        <span old_del="12" class="del-flag glyphicon glyphicon-remove"></span>
+                        <a class="singleLink" href="https://sso.tubiaoxiu.com/login" title="图表秀" target="_blank">
+                            <img class="img-links2" src="./Public/pic/tbx.png" style="box-shadow: 0 10px 10px -6px rgba(0, 157, 255, 0.75);">
+                            <span class="text-links">图表秀</span>
+                        </a>
+                    </li>
+					 <li data_old="13" class="sigleRecommond">
+                        <span old_del="13" class="del-flag glyphicon glyphicon-remove"></span>
+                        <a class="singleLink" href="http://www.speedtest.net/" title="网速测试，常用的哟~！" target="_blank">
+                        <img class="img-links2" src="./Public/pic/net_test.png" style="box-shadow: 0 10px 10px -6px rgb(0, 197, 144);">
+                        <span class="text-links">网速测试</span>
+                        </a>
+                    </li>
+                    <li data_old="14" class="sigleRecommond">
+                        <span old_del="14" class="del-flag glyphicon glyphicon-remove"></span>
+                        <a class="singleLink" href="http://wd.baiwan.pro/article/27" title="工程师必备工具哟，不二首选~！！！" target="_blank">
+                        <img class="img-links2" src="./Public/pic/gcs.png" style="box-shadow: 0 10px 10px -6px rgba(30, 128, 194, 0.75);">
+                        <span class="text-links">必备工具</span>
+                        </a>
                     </li>
             </div> 
         </div>
     </div>
-
-    <div class="framework">
-        <div class="main-conter">
-                <ul class="recommonds">
-                    <h4>工程工具</h4>
-                  <li data_old="18" class="sigleRecommond">
-                        <span old_del="18" class="del-flag glyphicon glyphicon-remove"></span>
-                        <a class="singleLink" href="http://www.speedtest.net/" title="网速测试，常用的哟~！" target="_blank">
-                        <img class="img-links2" src="./Public/pic/net_test.png" style="box-shadow: 0 10px 10px -6px rgb(28, 102, 197);">
-                        <span class="text-links">网速测试</span>
-                        </a>
-                    </li>
-                    <li data_old="20" class="sigleRecommond">
-                        <span old_del="20" class="del-flag glyphicon glyphicon-remove"></span>
-                        <a class="singleLink" href="http://wd.baiwan.pro/article/27" title="工程师必备工具哟，不二首选~！！！" target="_blank">
-                        <img class="img-links2" src="./Public/pic/gcs.png" style="box-shadow: 0 10px 10px -6px rgba(30, 128, 194, 0.75);">
-                        <span class="text-links">工程师必备工具</span>
-                        </a>
-                    </li>
-                    </ul>
-            </div>
-        </div>   
-        </a>
-
                         <div class="tab-content">
                             <div class="tab-pane" id="panel-wallpaper">
                                     <p>
