--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
 <title>i微洽通</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 <meta name="keywords" content="微洽通导航,微洽通之家">
 <meta name="description" content="i微洽通是微洽通旗下的轻便、简洁的网址导航，为广大微洽通员工提供定制化的应用性导航门户。">
 <base href="" />
