--- a/index.html
+++ b/index.html
@@ -154,56 +154,37 @@
                                             <label for="header_logo_day" class="col-sm-3 control-label">
                                                 Logo(白)
                                             </label>
-                                            <div class="col-sm-8">
-                                                <input class="form-control" id="header_logo_day" name="header_logo_day" placeholder="Logo图片Url(长宽比例 1:1)">
-                                            </div>
                                         </div>
                                         <div class="form-group">
                                             <label for="header_logo_night" class="col-sm-3 control-label">
                                                 Logo(黑)
                                             </label>
-                                            <div class="col-sm-8">
-                                                <input class="form-control" id="header_logo_night" name="header_logo_night" placeholder="Logo图片(黑夜)Url(长宽比例 1:1)">
-                                            </div>
                                         </div>
                                         <div class="form-group">
                                             <label for="day_pc" class="col-sm-3 control-label">
                                                 PC端(白)
                                             </label>
-                                            <div class="col-sm-8">
-                                                <input class="form-control" id="day_pc" name="day_pc"  placeholder="横版白天模式壁纸Url">
-                                            </div>
                                         </div>
                                         <div class="form-group">
                                             <label for="day_mobile" class="col-sm-3 control-label">
                                                 移动端(白)
                                             </label>
-                                            <div class="col-sm-8">
-                                                <input class="form-control" id="day_mobile" name="day_mobile"
-                                                        placeholder="">
-                                            </div>
                                         </div>
                                         <div class="form-group">
                                             <label for="night_pc" class="col-sm-3 control-label">
                                                 PC端(黑)
                                             </label>
-                                            <div class="col-sm-8">
-                                                <input class="form-control" id="night_pc" name="night_pc" placeholder="">
-                                            </div>
                                         </div>
                                         <div class="form-group">
                                             <label for="day_mobile" class="col-sm-3 control-label">
                                                 移动端(黑)
                                             </label>
-                                            <div class="col-sm-8">
-                                                <input class="form-control" id="night_mobile" name="night_mobile" placeholder="竖版黑黑模式壁纸Url">
-                                            </div>
                                         </div>
                                     </form>
                                 </div>    
 </div><br>
         <div class="footer-box">
-        <a id="banquan" href="http://i.keruyun.com" >
+        <a id="banquan" href="" >
             2018©微洽通导航
             <a href="javascript:void(0)" id="nightMode" class='yejian'>黑夜模式</a>
         </a>
