--- a/index.html
+++ b/index.html
@@ -94,6 +94,13 @@
                             <span class="text-links">友盟统计</span>
                             </a>
                     </li>
+                    <li data_old="8" class="sigleRecommond">
+                            <span old_del="8" class="del-flag glyphicon glyphicon-remove"></span>
+                            <a class="singleLink" href="https://app.yinxiang.com/Login.action" title="印象笔记" target="_blank">
+                            <img class="img-links2" src="./Public/pic/yinxiang.png" style="box-shadow: 0 10px 10px -6px rgba(39, 187, 91, 0.75);">
+                            <span class="text-links">印象笔记</span>
+                            </a>
+                    </li>
                     <li data_old="9" class="sigleRecommond">
                         <span old_del="9" class="del-flag glyphicon glyphicon-remove"></span>
                         <a class="singleLink" href="http://www.cnbeta.com/" title="cnBeta" target="_blank">
